force-app/main/default/objects/Product__c/fields/Min_Stock__c.field-meta.xml
<CustomField>
    <fullName>Min_Stock__c</fullName>
    <label>Min Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>