force-app/main/default/objects/Product__c/fields/Received_Stock__c.field-meta.xml
<CustomField>
    <fullName>Received_Stock__c</fullName>
    <label>Received Stock</label>
    <summarizedField>Stock__c.Quantity__c</summarizedField>
    <summaryForeignKey>Stock__c.Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>