force-app/main/default/objects/Product__c/fields/Sold_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Sold_Quantity__c</fullName>
    <label>Sold Quantity</label>
    <summarizedField>Sales_Order_Item__c.Quantity__c</summarizedField>
    <summaryForeignKey>Sales_Order_Item__c.Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>